--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@slack/web-api": "^6.8.1",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
+    "commander": "^11.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "yargs": "^17.7.2"
   }
 }
