--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "commander": "^11.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "md-to-pdf": "^5.2.4",
     "openai": "^3.2.1",
     "yargs": "^17.7.2"
   }
