--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.18.2",
     "md-to-pdf": "^5.2.4",
     "openai": "^3.2.1",
+    "uuid4": "^2.0.3",
     "yargs": "^17.7.2"
   }
 }
